# esp32c5

./: .gitignore  35fb544_main.c  BME690_FINAL_DIAGNOSIS.md  CUsersfyhgit_log.txt  build_log.txt  build_output.txt  build_test.bat  check_env.py  et GIT_PAGER=cat  flash_log.txt  idf55.bat  ninja_output.txt  partitions.csv  sdkconfig  sdkconfig.defaults  tmp_bme690_diagnose.py  tmp_bme690_root_cause.py  tmp_check_build.ps1  tmp_check_idf_log.ps1  tmp_check_log.ps1  tmp_clean_build.ps1  tmp_dump_err.ps1  tmp_list_bme.ps1  tmp_run_build.ps1  verify_bme690_v2.py  verify_bme690_v3.py  verify_bme690_v4.py  verify_bme690_v5.py  verify_bme690_v6.py
components/bme69x/: CMakeLists.txt  bme69x.c  bme69x_defs.h  bme69x_port.c  bme69x_port.h
components/volc_conv/: CMakeLists.txt  idf_component.yml
components/volc_conv/include/: volc_conv_app.h
components/volc_conv/src/: volc_conv_app.c  volc_conv_audio.c  volc_conv_internal.h  volc_conv_register.c  volc_conv_ws.c
jiaoben/: build_capture.bat  build_incremental.bat  build_quiet.bat  build_with_idf_env.bat  capture_chip_adc.py  capture_serial.ps1  check_port.ps1  flash_with_idf_env.bat  git_save.bat  list_ports.ps1  monitor_with_idf_env.bat  run_ninja.bat  test_env.py  verify_bme690_coeffs.py  verify_pressure.py
main/: CMakeLists.txt  Kconfig.projbuild  station_example_main.c
